--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "ag-grid-angular": "^33.0.3",
+    "ag-grid-community": "^33.0.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
