--- a/angular.json
+++ b/angular.json
@@ -112,6 +112,7 @@
             "styles": [
               "src/styles.scss",
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/sweetalert2/dist/sweetalert2.min.css"
             ],
             "scripts": []
           }
