--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "ag-grid-angular": "^33.0.3",
     "ag-grid-community": "^33.0.3",
+    "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.10",
