--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,8 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
-              }
+              },
+              "src/web.config"
             ],
             "styles": [
               "src/styles.scss",
